fixed team card alignment

--- a/src/components/Teams/TeamCard.css
+++ b/src/components/Teams/TeamCard.css
@@ -50,7 +50,7 @@
     .card-container {
         flex-direction: row;
         justify-content: center;
-        /* align-items: flex-start; */
+        align-items: flex-start;
         width: 70%;
         max-width: 950px;
         padding: 40px;
@@ -59,7 +59,7 @@
     .logo-section {
         text-align: left;
         margin-bottom: 0;
-        /* margin-right: 80px; */
+        margin-right: 80px;
     }
 
     .big-logo {
